<resources>
    <string name="app_name">Healthy</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repassword">Re-Password</string>
    <string name="realname">Real name</string>
    <string name="age">Age</string>
    <string name="btn_login">Log in</string>
    <string name="btn_register">Register new account</string>
    <string name="btn_add_weight">Add weight</string>
    <string name="btn_calculate">Calculate</string>
    <string name="btn_add">Add</string>
    <string name="btn_add_sleep">Add sleep</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="your_bmi">Your BMI</string>
    <string name="date">Date</string>
    <string name="sleep_start">Sleep time</string>
    <string name="sleep_end">Wake up time</string>
    <string name="missing_usr_pwd">Missing username or password</string>
    <string name="incorrect_usr_pwd">Incorrect username or password</string>

    <string name="post_card_title">%d : %s</string>
</resources>
