<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
        android:id="@+id/sleep_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Add sleep time"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:ems="10"
            android:id="@+id/sleep_form_input_date"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="date"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sleep_form_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sleep_start"
            android:ems="10"
            android:id="@+id/sleep_form_input_sleep_start"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sleep_form_input_date"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:inputType="time"/>
    <EditText
            android:id="@+id/sleep_form_input_sleep_end"
            android:hint="@string/sleep_end"
            android:ems="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/sleep_form_input_sleep_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="time"/>
    <Button
            android:text="@string/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sleep_form_btn_add"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/sleep_form_input_sleep_end"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>