<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:src="@drawable/diet"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="32dp"
                    android:id="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/app_name"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mail"
                    android:hint="@string/email"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    android:layout_marginTop="24dp"
                    android:id="@+id/login_input_email"
                    android:fontFamily="@font/ubuntu"
                    android:inputType="textEmailAddress|textShortMessage"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_key"
                    android:inputType="textPassword"
                    android:id="@+id/login_input_password"
                    android:hint="@string/password"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/login_input_email"
                    android:fontFamily="@font/ubuntu"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

            <Button
                    android:text="@string/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_btn_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/ubuntu"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/login_loading"
                    />

            <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn_login"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/ubuntu"/>

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_loading"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/login_input_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="gone"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>