<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:ems="10"
            android:id="@+id/weight_form_input_date"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:inputType="date"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:ems="10"
            android:id="@+id/weight_form_input_weight"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/weight_form_input_date"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:inputType="numberDecimal"/>

    <Button
            android:text="@string/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weight_form_btn_add"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/weight_form_input_weight"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <ProgressBar
            android:id="@+id/weight_form_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/weight_form_input_weight"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>