<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/register">
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                <EditText
                        android:id="@+id/register_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_mail"
                        android:hint="@string/email"
                        android:fontFamily="@font/ubuntu"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:inputType="textEmailAddress"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"/>

                <EditText
                        android:id="@+id/register_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_key"
                        android:hint="@string/password"
                        android:fontFamily="@font/ubuntu"
                        android:inputType="textPassword"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/register_input_email"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"/>

                <EditText
                        android:id="@+id/register_input_repassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_key"
                        android:hint="@string/repassword"
                        android:fontFamily="@font/ubuntu"
                        android:inputType="textPassword"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/register_input_password"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"/>

                <Button
                        android:text="@string/btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/register_input_repassword"
                        android:layout_marginTop="16dp"
                        android:id="@+id/register_btn_register"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/ubuntu"/>

                <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/register_loading"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/register_btn_register"
                        android:visibility="gone"/>
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>