<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bmi">
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                <EditText
                    android:id="@+id/bmi_input_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableLeft="@drawable/ic_person"
                    android:fontFamily="@font/ubuntu"
                    android:hint="@string/height"
                    android:inputType="number"
                    app:layout_constraintTop_toBottomOf="@+id/bmi_title"
                    tools:layout_editor_absoluteX="20dp" />

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_person_pin"
                        android:hint="@string/weight"
                        android:id="@+id/bmi_input_weight"
                        android:fontFamily="@font/ubuntu"
                        app:layout_constraintTop_toBottomOf="@+id/bmi_input_height"
                        android:layout_marginTop="8dp"
                        android:inputType="number"
                        tools:layout_editor_absoluteX="20dp"/>

                <Button
                        android:text="@string/btn_calculate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/bmi_input_weight"
                        android:layout_marginTop="16dp"
                        android:id="@+id/bmi_btn_calculate"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/ubuntu"/>

                <TextView
                        android:text="@string/your_bmi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bmi_txt_your_bmi"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/bmi_btn_calculate"
                        android:textSize="18sp"
                        android:fontFamily="@font/ubuntu"/>

                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bmi_txt_calculated_bmi"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/bmi_txt_your_bmi"
                        android:textSize="36sp"
                        android:fontFamily="@font/ubuntu"
                        android:textAlignment="center"
                        android:visibility="invisible"/>

                <TextView
                    android:id="@+id/bmi_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Calculate BMI"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>